--- a/lavis/projects/blip2/train/pretrain_stage1_med.yaml
+++ b/lavis/projects/blip2/train/pretrain_stage1_med.yaml
@@ -12,7 +12,18 @@ model:
 
 
 datasets:
-  coco_caption:
+  # coco_caption:
+  #   vis_processor:
+  #       train:
+  #         name: "blip2_image_train"
+  #         image_size: 224
+  #   text_processor:
+  #       train:
+  #         name: "blip_caption"
+#     build_info:
+#         images:
+#             storage: '/export/share/datasets/vision/coco/images/'          
+  med_caption:
     vis_processor:
         train:
           name: "blip2_image_train"
@@ -39,16 +50,16 @@ run:
   task: image_text_pretrain
   # optimizer
   lr_sched: "linear_warmup_cosine_lr"
-  init_lr: 1e-4
-  min_lr: 1e-5
+  init_lr: 1e-5
+  min_lr: 5e-6
   warmup_lr: 1e-6
 
   weight_decay: 0.05
-  max_epoch: 10
-  batch_size_train: 100
+  max_epoch: 500
+  batch_size_train: 120
   batch_size_eval: 64
   num_workers: 4
-  warmup_steps: 5000
+  warmup_steps: 50
 
   seed: 42
   output_dir: "output/BLIP2/Pretrain_stage1"
@@ -56,8 +67,10 @@ run:
   amp: True
   resume_ckpt_path: null
 
-  evaluate: False 
+  # evaluate: True
+  evaluate: False
   train_splits: ["train"]
+  # valid_splits: ["val","test"]
 
   device: "cuda"
   world_size: 1
