--- a/lavis/projects/blip2/train/caption_coco_ft.yaml
+++ b/lavis/projects/blip2/train/caption_coco_ft.yaml
@@ -39,7 +39,7 @@ run:
   warmup_steps: 1000
   weight_decay: 0.05
   max_epoch: 5
-  batch_size_train: 16
+  batch_size_train: 16   # 16
   batch_size_eval: 8
   num_workers: 4
   accum_grad_iters: 1
