--- a/lavis/projects/blip2/train/pretrain_stage1_med.yaml
+++ b/lavis/projects/blip2/train/pretrain_stage1_med.yaml
@@ -5,10 +5,12 @@
 
 model:
   arch: blip2
-  model_type: pretrain
+  # model_type: pretrain
+  model_type: scratch_364
   # TODO: support stage 1 pretraining from scratch (load_pretrained=False does not have effect as of now)
   load_pretrained: False
   freeze_vit: True
+  max_text_len: 120
 
 
 datasets:
@@ -27,10 +29,12 @@ datasets:
     vis_processor:
         train:
           name: "blip2_image_train"
-          image_size: 224
+          # image_size: 224
+          image_size: 364
     text_processor:
         train:
           name: "blip_caption"
+          max_words: 500
 #     build_info:
 #         images:
 #             storage: '/export/share/datasets/vision/coco/images/'          
@@ -50,16 +54,19 @@ run:
   task: image_text_pretrain
   # optimizer
   lr_sched: "linear_warmup_cosine_lr"
-  init_lr: 1e-5
-  min_lr: 5e-6
+  # init_lr: 1e-5
+  # min_lr: 5e-6
+  init_lr: 1e-4
+  min_lr: 1e-5
   warmup_lr: 1e-6
 
   weight_decay: 0.05
   max_epoch: 500
-  batch_size_train: 120
+  # batch_size_train: 120
+  batch_size_train: 48
   batch_size_eval: 64
   num_workers: 4
-  warmup_steps: 50
+  warmup_steps: 100
 
   seed: 42
   output_dir: "output/BLIP2/Pretrain_stage1"
