--- a/lavis/projects/blip2/train/pretrain_stage2_audio.yaml
+++ b/lavis/projects/blip2/train/pretrain_stage2_audio.yaml
@@ -5,14 +5,16 @@
 
 model:
   arch: blip2_llama
-  # model_type: pretrain_zidong13b # lavis/models/blip2_models/blip2_llama.py
-  model_type: pretrain_llama7b # lavis/models/blip2_models/blip2_llama.py
+  model_type: pretrain_zidong13b-audio # lavis/models/blip2_models/blip2_llama.py
+  # model_type: pretrain_llama7b # lavis/models/blip2_models/blip2_llama.py
   # model_type: pretrain_alpaca7b # lavis/models/blip2_models/blip2_llama.py
   load_pretrained: False
   # intialize stage 2 pretraining from stage 1 pretrained model
   # pretrained: "https://storage.googleapis.com/sfr-vision-language-research/LAVIS/models/BLIP2/blip2_pretrained.pth"
   # pretrained: "/data2/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1/20230409090/checkpoint_399.pth" # Stage1 重新训练
-  pretrained: "/data2/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1_music/20230415062/checkpoint_449.pth"
+  # pretrained: "/data/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1_music/20230415062/checkpoint_449.pth"
+  # pretrained: "/data/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1_music/20230417172/checkpoint_179.pth"
+  pretrained: "/data/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1_music/20230418024/checkpoint_499.pth"
 
   freeze_vit: True
   # freeze_vit: False
@@ -40,9 +42,9 @@ run:
   warmup_lr: 1e-6
 
   weight_decay: 0.05
-  max_epoch: 50
+  max_epoch: 150
   # batch_size_train: 16 # 16 for FlanT5-xxl
-  batch_size_train: 2 # 16 for FlanT5-xl with 3 layers open
+  batch_size_train: 6 # 16 for FlanT5-xl with 3 layers open
   # batch_size_train: 16 # 16 for FlanT5-xxl
   # accum_grad_iters: 4
   batch_size_eval: 64
