--- a/lavis/projects/blip2/train/pretrain_stage2_vicuna13b.yaml
+++ b/lavis/projects/blip2/train/pretrain_stage2_vicuna13b.yaml
@@ -15,7 +15,8 @@ model:
   # pretrained: "/data2/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1/20230227025_ep30bs120/checkpoint_29.pth"
   # pretrained: "/data2/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage2_t5/20230301122/checkpoint_149.pth" # T5 encoder 变成固定prompt
   # pretrained: "/data2/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1/20230301151/checkpoint_499.pth" # Stage1 重新训练
-  pretrained: "/data2/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1/20230409090/checkpoint_399.pth" # Stage1 重新训练
+  # pretrained: "/data/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage1/20230409090/checkpoint_369.pth" # Stage1 重新训练
+  pretrained: "/data/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage2_vicuna13b/20230414151/checkpoint_29.pth"
   # pretrained: "/data2/shij/codes/BLIP2/LAVIS/lavis/output/BLIP2/Pretrain_stage2_llama/20230412063/checkpoint_29.pth"
 
   # pure stage1 med pretrained 
