Add the wukong image_cap dataset.

--- a/lavis/configs/models/blip2/blip2_pretrain_zidong13b.yaml
+++ b/lavis/configs/models/blip2/blip2_pretrain_zidong13b.yaml
@@ -25,10 +25,11 @@ model:
   # opt_model: "facebook/opt-2.7b"
 
   # llama_model: "decapoda-research/llama-7b-hf"
-  llama_model: "/data/shij/llama/zidongv2/step1000" # 上面的本地版，修改了Llama的那个bug
+  llama_model: "/data/shij/llama/zidongv2/step1000_v3" # 上面的本地版，修改了Llama的那个bug
 
   # generation configs
   prompt: ""
+  max_txt_len: 256
 
 
 preprocess:
@@ -42,5 +43,7 @@ preprocess:
     text_processor:
         train:
           name: "blip_caption"
+          max_words: 320
         eval:
           name: "blip_caption"
+          max_words: 320
