--- a/lavis/configs/models/blip2/blip2_pretrain_baichuan7b.yaml
+++ b/lavis/configs/models/blip2/blip2_pretrain_baichuan7b.yaml
@@ -17,6 +17,7 @@ model:
   use_grad_checkpoint: False
   vit_precision: "fp16"
   freeze_vit: True
+  freeze_qformer: False
 
   # Q-Former
   num_query_token: 32
@@ -25,11 +26,14 @@ model:
   # opt_model: "facebook/opt-2.7b"
 
   # llama_model: "decapoda-research/llama-7b-hf"
-  llama_model: "/data/shij/llama/zidongv2/step1000_v3" # 上面的本地版，修改了Llama的那个bug
+  # llama_model: "/data/shij/llama/zidongv2/step1000_v3" # 上面的本地版，修改了Llama的那个bug
+  # llama_model: "/data/shij/llama/zidongv2/step1000_v3" # 上面的本地版，修改了Llama的那个bug
+  # llama_model: "/data/shij/llama/baichuan-7B"
+  llama_model: "/data/shij/llama/baichuan-vicuna-chinese-7b"
 
   # generation configs
   prompt: ""
-  max_txt_len: 256
+  max_txt_len: 64
 
 
 preprocess:
