--- a/lavis/configs/models/blip2/blip2_pretrain_zidong13b-audio.yaml
+++ b/lavis/configs/models/blip2/blip2_pretrain_zidong13b-audio.yaml
@@ -26,7 +26,8 @@ model:
 
   # llama_model: "decapoda-research/llama-7b-hf"
   # llama_model: "/data/shij/llama/zidongv2/step1000" # 上面的本地版，修改了Llama的那个bug
-  llama_model: "/data/shij/llama/zidongv2/step1000_v3" # 上面的本地版，修改了Llama的那个bug
+  # llama_model: "/data/shij/llama/zidongv2/step1000_v3" # 上面的本地版，修改了Llama的那个bug
+  llama_model: "/data/shij/llama/zidongv2/new_v6/checkpoint-6000" # 上面的本地版，修改了Llama的那个bug
 
   # generation configs
   prompt: ""
